--- a/djaesy/templates/djaesy/base2.html
+++ b/djaesy/templates/djaesy/base2.html
@@ -253,7 +253,7 @@
                         <div class="d-flex align-items-center">
                             <!-- Logo -->
                             {% if options.navbar_logo %}
-                            <span><img class="d-none d-lg-block img-fluid navbar-logo pr-3" src="{%  static 'djaesy/logos/middle-logo.png' %}"></span>
+                            <!--<span><img class="d-none d-lg-block img-fluid navbar-logo pr-3" src="{%  static 'djaesy/logos/middle-logo.png' %}"></span>-->
                             {% endif %}
                             <!-- End Logo -->
                             <!-- Notifications -->
