--- a/djaesy/templates/djaesy/base2.html
+++ b/djaesy/templates/djaesy/base2.html
@@ -299,7 +299,7 @@
                                     <span class="d-none d-xl-inline-block ml-1">{{ user.get_username }}</span>
                                     <i class="mdi mdi-chevron-down d-none d-sm-inline-block"></i>
                                 </button>
-                                <div class="dropdown-menu dropdown-menu-right">
+                                <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
                                     <a class="dropdown-item d-flex align-items-center justify-content-between" href="{% url 'user_change_password' %}">
                                         <span>{% trans 'Mudar Senha' %}</span>
                                     </a>
