--- a/djaesy/webpack/app/assets/css/variables.scss
+++ b/djaesy/webpack/app/assets/css/variables.scss
@@ -67,7 +67,7 @@
     --grid-gutter: 24px;
 
     --footer-bg-color: #FFF;
-    --footer-height: 80px;
+    --footer-height: 4rem;
 
     --blue: #3281f2;
     --indigo: #3F51B5;
