--- a/djaesy/templates/djaesy/login/login-base.html
+++ b/djaesy/templates/djaesy/login/login-base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="{%  static 'djaesy/login/css/login.css' %}"/>
 </head>
 <body>
-    <div class="container-fluid h-100 mh-100">
+    <div class="container-fluid p-0 h-100 mh-100">
         <div class="row h-100 mh-100">
             <div class="login-left-area d-none d-sm-none d-md-flex col-md-6 col-lg-7 col-xl-8 align-items-center justify-content-center">
                 <div class="container-fluid h-100 mh-100">
