--- a/djaesy/templates/djaesy/base.html
+++ b/djaesy/templates/djaesy/base.html
@@ -67,7 +67,7 @@
             <!-- ============================================================== -->
             <!-- Start MAIN Content here -->
             <!-- ============================================================== -->
-            <div class="main-content content-wrapper inner-content" {% if options.simplebar_scroller %}data-simplebar{% endif %}>
+            <div class="main-content inner-content" {% if options.simplebar_scroller %}data-simplebar{% endif %}>
 
                 {% block main_content_start %}
                 {% endblock %}
