--- a/djaesy/templates/djaesy/base2.html
+++ b/djaesy/templates/djaesy/base2.html
@@ -63,7 +63,7 @@
         </div>
 
         <!-- Begin page -->
-        <div class="wrapper blur">
+        <div class="wrapper panel-wrapper blur">
 
             <div id="event_notification">
                 <!-- Control Elements -->
