--- a/djaesy/webpack/app/assets/css/theme/_top_navbar.scss
+++ b/djaesy/webpack/app/assets/css/theme/_top_navbar.scss
@@ -11,7 +11,7 @@
     left: 0;
     z-index: 1002;
     max-height: 100px;
-    background-color: var(--top-header-background-color);
+    background-color: var(--base-background);
 
     .navbar-header {
 
@@ -26,7 +26,7 @@
         -ms-flex-align: center;
         align-items: center;
         margin: 0 0 0 var(--sidebar-open-size);
-        //background-color: var(--top-navbar-bg-color);
+        background: var(--top-navbar-bg-color);
         box-shadow: none;
         padding: 0;
         transition: margin-left .3s ease-in-out;
